unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/Live_Event_Coverage_Timing__c.object-meta.xml
<CustomObject>
    <label>Live Event Coverage Timing</label>
    <nameField>
        <displayFormat>LEC-{0}</displayFormat>
        <label>Timing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live Event Coverage Timings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>