unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Compensation_USD__c.field-meta.xml
<CustomField>
    <fullName>Compensation_USD__c</fullName>
    <formula>IF( Off_Hours_Covered__c &lt;= 2.5, 250, 100 * Off_Hours_Covered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensation (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>