unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Coverage_Duration_hours__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Duration_hours__c</fullName>
    <formula>CEILING( (End_of_Coverage__c -  Start_of_Coverage__c )*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Duration (hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>