unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Coverage_Engineer_Region__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Engineer_Region__c</fullName>
    <formula>TEXT(Coverage_Engineer__r.CS_Region__c)</formula>
    <label>Coverage Engineer Region</label>
    <type>Text</type>
</CustomField>