unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Coverage_Engineer_Role__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Engineer_Role__c</fullName>
    <description>Help us identify if the type of engineer that covered the event</description>
    <formula>TEXT(Coverage_Engineer__r.CS_Role__c)</formula>
    <label>Coverage Engineer Role</label>
    <type>Text</type>
</CustomField>