unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/CoverageLink__c.field-meta.xml
<CustomField>
    <fullName>CoverageLink__c</fullName>
    <label>Live Event Coverage</label>
    <referenceTo>Live_Event_Coverage__c</referenceTo>
    <relationshipLabel>Live Event Coverage Timings</relationshipLabel>
    <relationshipName>Live_Event_Coverage_Timings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>