unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/LE_Owner_text__c.field-meta.xml
<CustomField>
    <fullName>LE_Owner_text__c</fullName>
    <formula>CoverageLink__r.Live_Event_Coverage_Owner__r.FirstName &amp; &quot; &quot; &amp; CoverageLink__r.Live_Event_Coverage_Owner__r.LastName</formula>
    <label>LE Owner (text)</label>
    <type>Text</type>
</CustomField>