unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/LEC_Link__c.field-meta.xml
<CustomField>
    <fullName>LEC_Link__c</fullName>
    <formula>&quot;=hyperlink(&quot;&amp;&#39;&quot;&#39;&amp;&quot;https://brightcove2.my.salesforce.com/&quot;&amp;Id&amp;&#39;&quot;&#39;&amp;&#39;,&#39;&amp; &#39;&quot;&#39;&amp;Name&amp;&#39;&quot;&#39;&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LEC Link</label>
    <type>Text</type>
</CustomField>