unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Legacy_Compensation_USD__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Compensation_USD__c</fullName>
    <label>Legacy Compensation USD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>