unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Legacy_Cov_Engineer_name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Cov_Engineer_name__c</fullName>
    <label>Legacy Cov Engineer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>