unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Legacy_LEC_owner__c.field-meta.xml
<CustomField>
    <fullName>Legacy_LEC_owner__c</fullName>
    <label>Legacy LEC owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>