unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <formula>CoverageLink__r.Owner:User.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Email</label>
    <type>Text</type>
</CustomField>