unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Off_Hours_Covered__c.field-meta.xml
<CustomField>
    <fullName>Off_Hours_Covered__c</fullName>
    <label>#Off Hours Covered</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>