unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Rep_For_Payment_text__c.field-meta.xml
<CustomField>
    <fullName>Rep_For_Payment_text__c</fullName>
    <formula>Coverage_Engineer__r.FirstName &amp;&quot; &quot; &amp; Coverage_Engineer__r.LastName</formula>
    <label>Rep For Payment (text)</label>
    <type>Text</type>
</CustomField>