unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Start_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Coverage__c</fullName>
    <label>Start of Coverage</label>
    <type>DateTime</type>
</CustomField>