unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
                <default>true</default>
                <label>Event</label>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Shadowing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>