unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/validationRules/No_Future_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 Start_of_Coverage__c &gt; NOW(),
 End_of_Coverage__c &gt; NOW()
)</errorConditionFormula>
    <errorMessage>The Start of Coverage and End of Coverage can&#39;t be dates in the future.
Please review your inputs.</errorMessage>
</ValidationRule>